--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
             <span class="sr-only">Ekalavyan's Portfolio</span>
           </a>
           <nav class="hidden lg:flex gap-4 sm:gap-6">
-            <a class="text-sm font-medium hover:underline underline-offset-4" href="#">
+            <a class="text-sm font-medium hover:underline underline-offset-4" href="#about">
               About
             </a>
-            <a class="text-sm font-medium hover:underline underline-offset-4" href="#">
+            <a class="text-sm font-medium hover:underline underline-offset-4" href="#skills">
               Skills
             </a>
-            <a class="text-sm font-medium hover:underline underline-offset-4" href="#">
+            <a class="text-sm font-medium hover:underline underline-offset-4" href="#projects">
               Projects
             </a>
-            <a class="text-sm font-medium hover:underline underline-offset-4" href="#">
+            <a class="text-sm font-medium hover:underline underline-offset-4" href="#contact">
               Contact
             </a>
           </nav>
